# deep-memory

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/: labels.md
benchmarks/: memory_benchmark.py
docs/: ADAPTERS.md  AGENT_INSTALL_GUIDE.md  AGENT_INSTALL_GUIDE.zh-CN.md  AGENT_QUICKSTART_MATRIX.md  ARCHITECTURE.md  BRAND_EXPLORATION.md  CHINESE_RETRIEVAL_EVAL.md  COMMUNITY.md  COMPETITIVE_BENCHMARK.md  CONTRIBUTING_FIRST_PR.md  GOOD_FIRST_ISSUE_DRAFTS.md  GRAPH_VIZ.md  HERMES_INTEGRATION.md  LAUNCH_LOOP.md  LAUNCH_PLAN.md  M1_GO_NO_GO.md  MCP_INTEROPERABILITY.md  MEMORY_BENCHMARK.md  MEMORY_LIFECYCLE.md  MEMORY_POLICY.md  MEMORY_TO_SKILL.md  METRICS.md  NEXT_PHASE_BACKLOG.md  PHASED_KANBAN_PLAN.md  PRELAUNCH_EVAL_REPORT.md  PROVENANCE.md  README_HOMEPAGE_RESEARCH.md  RELEASE.md  ROADMAP.md  SAFETY_AND_PRIVACY.md  SCOPING_AND_IDEMPOTENCY.md  SKILL_ACTIVATION_LOOP.md  SYNC_PATTERNS.md  TEAMBITION_BACKLOG.csv  TELEMETRY.md  TROUBLESHOOTING.md  TRUST_MODEL.md  VECTOR_BENCHMARK.md  VECTOR_EVALUATION.md  VECTOR_ROADMAP.md  (+3 more)
evals/: __init__.py  chinese_retrieval_eval.py  prelaunch_eval.py  retrieval_benchmark.py  synonym_retrieval_eval.py
examples/: memory_vs_nomemory.py  quickstart.py
scripts/: dev_setup.sh  run_adapter_smoke.py
tests/: test_backups.py  test_benchmark.py  test_chinese_retrieval.py  test_chinese_retrieval_eval.py  test_cli_export_delete.py  test_codex_wrapper.py  test_competitive_benchmark.py  test_core.py  test_embedding_backfill.py  test_embedding_config.py  test_embeddings.py  test_extraction.py  (+14 more)
(+51 files in other folders)
